--- a/ChilApp/Base.lproj/Main.storyboard
+++ b/ChilApp/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="8IZ-bQ-cbi">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="8IZ-bQ-cbi">
                                 <rect key="frame" x="0.0" y="5" width="320" height="499"/>
                                 <color key="backgroundColor" red="0.93324202299118042" green="0.93337970972061157" blue="0.93322324752807617" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
@@ -58,6 +58,43 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="866.25" y="792.25352112676057"/>
+        </scene>
+        <!--Exhibition DetailsVC-->
+        <scene sceneID="m9o-nl-RVP">
+            <objects>
+                <viewController storyboardIdentifier="ExhibitionDetailsVC" id="y1M-Jo-fEE" customClass="ExhibitionDetailsVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Vb7-gi-lfI"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ij2-N1-0U7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xUE-eK-rpR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lji-9L-JrC">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="y1M-Jo-fEE" id="OwJ-CT-nx6"/>
+                                    <outlet property="delegate" destination="y1M-Jo-fEE" id="Wum-Gl-5yb"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="lji-9L-JrC" secondAttribute="trailing" id="EnX-8b-WIR"/>
+                            <constraint firstItem="lji-9L-JrC" firstAttribute="leading" secondItem="xUE-eK-rpR" secondAttribute="leading" id="MzO-Ja-sIO"/>
+                            <constraint firstItem="Ij2-N1-0U7" firstAttribute="top" secondItem="lji-9L-JrC" secondAttribute="bottom" id="cc9-5q-2Bl"/>
+                            <constraint firstItem="lji-9L-JrC" firstAttribute="top" secondItem="Vb7-gi-lfI" secondAttribute="bottom" id="gRR-9F-dcg"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableViewObj" destination="lji-9L-JrC" id="bQo-Jh-YEM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z8y-he-QPj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1504" y="792"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="a98-tn-SOU">
