--- a/ChilApp/Base.lproj/Main.storyboard
+++ b/ChilApp/Base.lproj/Main.storyboard
@@ -96,6 +96,72 @@
             </objects>
             <point key="canvasLocation" x="1504" y="792"/>
         </scene>
+        <!--Map Vc-->
+        <scene sceneID="nFW-Wz-2fQ">
+            <objects>
+                <viewController storyboardIdentifier="MapVc" id="qeK-8m-O6c" customClass="MapVc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3d2-a9-Vl6"/>
+                        <viewControllerLayoutGuide type="bottom" id="YO4-Gb-7Xl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6PT-PK-gUc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="map.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="PdO-tw-8Hl">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93324202300000003" green="0.93337970969999995" blue="0.93322324749999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="PdO-tw-8Hl" firstAttribute="leading" secondItem="6PT-PK-gUc" secondAttribute="leading" id="7FT-Og-9sJ"/>
+                            <constraint firstItem="YO4-Gb-7Xl" firstAttribute="top" secondItem="PdO-tw-8Hl" secondAttribute="bottom" id="Cwg-9A-B2d"/>
+                            <constraint firstAttribute="trailing" secondItem="PdO-tw-8Hl" secondAttribute="trailing" id="ZZS-U2-rue"/>
+                            <constraint firstItem="PdO-tw-8Hl" firstAttribute="top" secondItem="3d2-a9-Vl6" secondAttribute="bottom" id="Zog-GG-W3Q"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VM6-ss-CFB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2128" y="789"/>
+        </scene>
+        <!--Stalls Vc-->
+        <scene sceneID="3AG-0X-Bh3">
+            <objects>
+                <viewController storyboardIdentifier="StallsVc" id="fnw-Y0-chG" customClass="StallsVc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jd4-fe-66P"/>
+                        <viewControllerLayoutGuide type="bottom" id="BvP-Ve-Vu5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7JF-VS-OMx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ew9-hj-CJd">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" red="0.93324202300000003" green="0.93337970969999995" blue="0.93322324749999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="fnw-Y0-chG" id="oQg-Hx-3Eg"/>
+                                    <outlet property="delegate" destination="fnw-Y0-chG" id="gyL-gk-UBT"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93324202300000003" green="0.93337970969999995" blue="0.93322324749999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="BvP-Ve-Vu5" firstAttribute="top" secondItem="Ew9-hj-CJd" secondAttribute="bottom" id="IfX-WN-zYC"/>
+                            <constraint firstAttribute="trailing" secondItem="Ew9-hj-CJd" secondAttribute="trailing" id="PHc-ZP-uQR"/>
+                            <constraint firstItem="Ew9-hj-CJd" firstAttribute="top" secondItem="Jd4-fe-66P" secondAttribute="bottom" id="jru-CW-Irq"/>
+                            <constraint firstItem="Ew9-hj-CJd" firstAttribute="leading" secondItem="7JF-VS-OMx" secondAttribute="leading" id="pLW-FP-ygp"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableViewObj" destination="Ew9-hj-CJd" id="F0x-SW-TXN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KlW-Aj-8LL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2777" y="787"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="a98-tn-SOU">
             <objects>
@@ -117,6 +183,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="map.jpg" width="1347" height="1437"/>
         <image name="search_btn.png" width="72" height="72"/>
     </resources>
 </document>
